--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/podoma.min.css">
+    <link rel="stylesheet" href="./css/podoma.min.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid d-flex justify-content-between justify-content-lg-center">
-                <a class="navbar-brand" href="#"><img src="/media/images/logo_dark.png"></a>
+                <a class="navbar-brand" href="#"><img src="./media/images/logo_dark.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -66,7 +66,7 @@
                 <div class="featured-product-content">
                     <div class="row justify-content-center align-items-center">
                         <div class="col-4">
-                            <img src="/media/images/new/hero_featured_product.png" alt="Featured Product">
+                            <img src="./media/images/new/hero_featured_product.png" alt="Featured Product">
                         </div>
                         <div class="col-6 align-self-end d-md-none">
                             <h4 class="f-effect-1">Зачинал</h4>
@@ -96,7 +96,7 @@
                 </h2>
                 <div class="row category-cards justify-content-center">
                     <div class="card col-12 col-md-6 col-lg-4">
-                        <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                        <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">За Чист Дом</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="card col-12 col-md-6 col-lg-4">
-                        <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                        <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -129,7 +129,7 @@
                 </h2>
                 <div class="row recipe-card justify-content-center align-items-center">
                     <div class="col-12 col-lg-5">
-                        <img src="/media/images/new/recipe_card_image_1.jpg" alt="">
+                        <img src="./media/images/new/recipe_card_image_1.jpg" alt="">
                     </div>
                     <div class="col-12 col-lg-5">
                         <div class="content d-flex flex-column align-items-center justify-content-center">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="row flex-row-reverse recipe-card justify-content-center align-items-center">
                     <div class="col-12 col-lg-5">
-                        <img src="/media/images/new/recipe_card_image_2.jpg" alt="">
+                        <img src="./media/images/new/recipe_card_image_2.jpg" alt="">
                     </div>
                     <div class="col-12 col-lg-5">
                         <div class="content d-flex flex-column align-items-center justify-content-center">
@@ -189,7 +189,7 @@
                     <!-- Slides -->
                     <div class="swiper-slide">
                         <div class="card col-12 col-md-6 col-lg-4">
-                            <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                            <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">За Чист Дом</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card col-12 col-md-6 col-lg-4">
-                            <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                            <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">За Чист Дом</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card col-12 col-md-6 col-lg-4">
-                            <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                            <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">За Чист Дом</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -219,7 +219,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card col-12 col-md-6 col-lg-4">
-                            <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                            <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">За Чист Дом</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -236,7 +236,7 @@
         <footer>
             <div class="container-lg">
                 <div class="row">
-                    <img src="/media/images/new/footer_icon1.svg" alt="" srcset="" style="width: 84px;">
+                    <img src="./media/images/new/footer_icon1.svg" alt="" srcset="" style="width: 84px;">
                 </div>
                 <div class="row mt-4 justify-content-between">
                     <div class="col-10 col-lg-5">
@@ -246,17 +246,17 @@
                         <ul class="socials d-flex gap-3 p-0 mt-5">
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="/media/images/new/facebook_icon.svg" alt="">
+                                    <img src="./media/images/new/facebook_icon.svg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="/media/images/new/twitter_icon.svg" alt="">
+                                    <img src="./media/images/new/twitter_icon.svg" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="/media/images/new/instagram_icon.svg" alt="">
+                                    <img src="./media/images/new/instagram_icon.svg" alt="">
                                 </a>
                             </li>
                         </ul>
@@ -302,6 +302,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
