--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="card col-12 col-md-6 col-lg-4">
-                        <img src="/media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
+                        <img src="./media/images/new/category_card_1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
